Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h4>
 <a id="ray-anthony--rayrc-trust-co" class="anchor" href="#ray-anthony--rayrc-trust-co" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ray Anthony | RayRC Trust Co.</h4>
 
-<p><img src="https://github.com/favicon.png" alt="My Unicorn">. ~ Profit quite simple <em>really</em>. ~</p>
+<p><img alt="@rayrc" height="100" itemprop="image" src="https://avatars0.githubusercontent.com/u/12002053?v=3&amp;s=200" width="100"></p>
 
 <p>ay, chihuahua</p>
 
