Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="rayrcgithubio" class="anchor" href="#rayrcgithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>rayrc.github.io.</h1>
-
-<h1></h1>
+<a id="rayrc-" class="anchor" href="#rayrc-" aria-hidden="true"><span class="octicon octicon-link"></span></a>RayRC =======================</h1>
 
 <h4>
 <a id="ray-anthony--rayrc-trust-co" class="anchor" href="#ray-anthony--rayrc-trust-co" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ray Anthony | RayRC Trust Co.</h4>
@@ -49,8 +47,7 @@
 <p>
 </p>
 
-<p><a href="https://github.com/rayrc" class="user-mention">@rayrc</a> <a href="https://github.com/rayantony" class="user-mention">@rayantony</a>
-<img src="https://github.com/unicorn.png" alt="My Unicorn">.</p>
+<p><a href="https://github.com/rayrc" class="user-mention">@rayrc</a> <a href="https://github.com/rayantony" class="user-mention">@rayantony</a></p>
 </div>
 
       <footer class="site-footer">
