Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">RayRC</h1>
-      <h2 class="project-tagline">Ray Anthony ~ Profit yeah it&#39;s fairly simple. TF is Funding?</h2>
+      <h2 class="project-tagline">Ray Anthony ~ Profit yeah it&#39;s fairly simple. </h2>
       <a href="https://github.com/rayrc/rayrc.github.io." class="btn">View on GitHub</a>
       <a href="https://github.com/rayrc/rayrc.github.io./zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/rayrc/rayrc.github.io./tarball/master" class="btn">Download .tar.gz</a>
