--- a/index.html
+++ b/index.html
@@ -2,12 +2,49 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Rayrc.GitHub.io by rayrc</title>
+    <title>Rayrc.GitHub.io : RayRC Team Page </title>
+    <meta name="referrer" content="unsafe-url">
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="width=device-width">
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-title" content="Ray Anthony Personal Site">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta http-equiv="cleartype" content="on">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Ray Anthony Github Team">
+<meta name="twitter:image" content="https://avatars1.githubusercontent.com/u/9811019?v=3&amp;s=140">
+
+        <meta name="google-site-verification" content="JJatNxkPKLE4xbusOP9au4S3sE-u6iVO-NRfuzoYTjQ" />
+        <meta name="msvalidate.01" content="">
+        <meta name="alexaVerifyID" content="">
+        <meta name="yandex-verification" content="">
+        <meta name="google-plus" content="https://plus.google.com/101353686174880991386">
+<!--   egypt ....  -->
+ <meta name="contributes-to" content="//plus.google.com/?">
+ <meta name="contributes-to" content="//github.com/?q=rayantony">
+<meta name="contributes-to" content="//rayantony.github.io">
+        <link rel="author" content="ray@rccloud.me" href="https://twitter.com/rayanthonyrcc">
+
+
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />  <META NAME="Slurp" CONTENT="nocache"> 
+    <META NAME="iarchiver" CONTENT="NOARCHIVE">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    
+  <!-- other CSS -->
+  <link rel="stylesheet" href="https://rayantony.github.io/public/css/poole.css">
+  <link rel="stylesheet" href="https://rayantony.github.io/public/css/syntax.css">
+  
+
   </head>
   <body>
     <section class="page-header">
